OpenAPI Docs completed for server
